--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,33 +1,62 @@
 {
   "name": "dashboard",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config config/webpack.development.js",
+    "build": "webpack --config config/webpack.production.js"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.0.0",
-    "primevue": "^3.0.1",
-    "vue": "^3.0.0"
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@vue/compiler-sfc": "^3.4.29",
+    "babel-loader": "^9.1.3",
+    "chart.js": "^4.4.3",
+    "core-js": "^3.8.3",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "node-sass": "^9.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "vue": "^3.2.13",
+    "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@vue/compiler-sfc": "^3.0.2",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4",
-    "style-loader": "^2.0.0",
-    "vue-loader": "^16.0.0-beta.9",
-    "vue-style-loader": "^4.1.2",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0"
-  }
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
